--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "@octokit/rest": "^16.36.0",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-htmlbars": "^4.0.5"
   },
