--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.11.1",
-    "ember-cli-htmlbars": "^4.0.5"
+    "ember-cli-htmlbars": "^4.0.5",
+    "ember-split-view-modifier": "0.0.3"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
@@ -45,7 +46,6 @@
     "ember-resolver": "^5.3.0",
     "ember-source": "~3.14.1",
     "ember-source-channel-url": "^2.0.1",
-    "ember-split-view-modifier": "0.0.3",
     "ember-try": "^1.2.1",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
